fixed problems with tests not working, added vm lines in pom.xml